# BostonOverlayExtractor

./: .gitignore  README.md  bootstrap.py  extract.py  pyproject.toml  requirements.txt  scan_magic.py
config/: config.yaml
src/boe/: __init__.py
src/boe/backend/: manager.py
src/boe/core/: cli.py  config.py  constants.py  context.py  doctor.py  exceptions.py  logger.py  process.py  tool_manager.py  wsl.py
src/boe/discover/: inventory.py  motorola.py
src/boe/filesystem/: detector.py
src/boe/lp/: geometry.py  header.py  parser.py  partitions.py
src/boe/models/: archive.py  firmware.py
src/boe/pipeline/: extract.py  merge.py  super_parser.py  unpack.py
src/boe/plugins/: base.py
src/boe/runtime/: environment.py  session.py  state.py  workspace.py
src/boe/utils/: archive.py  downloader.py  sparse.py
test_decode/: AndroidManifest.xml  apktool.yml
test_decode/original/: AndroidManifest.xml
test_decode/res/anim/: activity_close_enter.xml  activity_close_exit.xml  activity_open_enter.xml  activity_open_exit.xml  flat_button_state_list_anim_material.xml  resolver_close_anim.xml  task_fragment_close_exit.xml  task_fragment_open_enter.xml  zz_moto_decor_caption_view_enter.xml  zz_moto_decor_caption_view_exit.xml  zz_moto_desk_task_to_back_exit.xml  zz_moto_fod_masking_exit.xml  zz_moto_global_freeform_activity_close_enter.xml  zz_moto_global_freeform_activity_close_exit.xml  (+4 more)
test_decode/res/anim-ldrtl/: activity_close_enter.xml  activity_close_exit.xml  activity_open_enter.xml  activity_open_exit.xml  task_fragment_close_exit.xml
(+2295 files in other folders)
