[project]
name = "boston-overlay-extractor"
version = "0.1.0"
description = "Automatic Motorola firmware analyzer and Android Runtime Resource Overlay generator."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Muhammad Imam Hossain" }
]

dependencies = [
    "rich>=13.7",
    "PyYAML>=6.0",
    "lxml>=5.2",
    "tqdm>=4.66",
    "platformdirs>=4.2"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "black>=24.4",
    "ruff>=0.5",
    "mypy>=1.10"
]

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.pytest.ini_options]
pythonpath = [
    "src"
]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"